<resources>
    <string name="app_name">HelperGenie2</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">HelperGenie</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in HelperGenie now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="app_version">HelperGenie 2.0</string>
    <string name="q1">Why my Pincode is not here?</string>
    <string name="a1">It is because our service is not available there.</string>

    <string name="q2">How can I be the Service-Provider at HelperGenie?</string>
    <string name="a2">In About us , you can get Contact to us . We tell Procedure for test and appropriate documents you need.</string>

    <string name="q3">How can identify that the Service-Provider is from HelperGenie?</string>
    <string name="a3">Our Service-Provider has ID-card with QR-code to recognize.</string>

    <string name="q4">What is minimum version of Android required?</string>
    <string name="a4">Lolipop 5.0</string>

    <string name="q5">What are the Payment method available?</string>
    <string name="a5">You can payment through Cash-on-delivery,Debitcard,Paytm,UPI and Netbanking</string>
</resources>
